--- a/templates/index.html
+++ b/templates/index.html
@@ -429,10 +429,14 @@
             <div class="pref-row">
               <label>Max Width</label>
               <select id="layoutMaxWidth">
+                <option value="30">30%</option>
+                <option value="40">40%</option>
+                <option value="50">50%</option>
                 <option value="60">60%</option>
                 <option value="70">70%</option>
                 <option value="80">80%</option>
                 <option value="90">90%</option>
+                <option value="100">100%</option>
               </select>
             </div>
           </div>
@@ -719,6 +723,9 @@
 <script src="/static/js/app.js"></script>
 
 <style>
+.header {
+  justify-content: center;
+}
 .card[data-module] {
   user-select: none;
 }
@@ -824,7 +831,7 @@
   border: 1px solid var(--border);
   border-radius: 12px;
   width: 80%;
-  max-width: 80%;
+  max-width: 1800px;
   max-height: 80vh;
   display: flex;
   flex-direction: column;
