system and baseboard modules added

--- a/templates/index.html
+++ b/templates/index.html
@@ -157,6 +157,20 @@
         </div>
       </div>
 
+      <div class="card span-4" data-module="systeminfo" draggable="true">
+        <h3><i class="fas fa-desktop"></i> System<div class="header-icons"><i class="fas fa-grip-vertical drag-handle" title="Drag to reorder"></i></div></h3>
+        <div id="systeminfoContent">
+          <div class="muted">Loading...</div>
+        </div>
+      </div>
+
+      <div class="card span-4" data-module="baseboard" draggable="true">
+        <h3><i class="fas fa-server"></i> Baseboard<div class="header-icons"><i class="fas fa-grip-vertical drag-handle" title="Drag to reorder"></i></div></h3>
+        <div id="baseboardContent">
+          <div class="muted">Loading...</div>
+        </div>
+      </div>
+
       <div class="card span-6" data-module="links" draggable="true">
         <h3><i class="fas fa-link"></i> Quick Links<div class="header-icons"><i class="fas fa-grip-vertical drag-handle" title="Drag to reorder"></i></div></h3>
         <div id="quicklinksContainer">
