--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,30 @@
   });
 })();
 </script>
+<script>
+// Service Worker Registration
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', function() {
+    navigator.serviceWorker.register('/sw.js', { scope: '/' })
+      .then(function(registration) {
+        console.log('[Service Worker] Registration successful:', registration.scope);
+        
+        // Check for updates
+        registration.addEventListener('updatefound', function() {
+          const newWorker = registration.installing;
+          newWorker.addEventListener('statechange', function() {
+            if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
+              console.log('[Service Worker] New version available. Reload to update.');
+            }
+          });
+        });
+      })
+      .catch(function(error) {
+        console.error('[Service Worker] Registration failed:', error);
+      });
+  });
+}
+</script>
 
   <div class="header">
     <div class="brand">
