added websockets, be is fine, FE needs work
service worker still mystifies me, we cant escape a refresh stuck op

--- a/templates/index.html
+++ b/templates/index.html
@@ -829,6 +829,7 @@ if ('serviceWorker' in navigator) {
 <script src="/static/js/graphs.js"></script>
 <script src="/static/js/modules/system.js"></script>
 <script src="/static/js/modules/weather.js"></script>
+<script src="/static/js/modules/websocket.js"></script>
 <script src="/static/js/modules/network.js"></script>
 <script src="/static/js/modules/search.js"></script>
 <script src="/static/js/modules/github.js"></script>
